--- a/STM32/Cube1/Cube1.ioc
+++ b/STM32/Cube1/Cube1.ioc
@@ -1,13 +1,26 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.DAC1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DAC1.0.Instance=DMA1_Stream5
+Dma.DAC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC1.0.Mode=DMA_NORMAL
+Dma.DAC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC1.0.Priority=DMA_PRIORITY_LOW
+Dma.DAC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=DAC1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DAC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -30,6 +43,7 @@ Mcu.UserName=STM32F446RETx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -114,7 +128,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
