Run Cube code generator after opening the renamed .ioc file.

--- a/STM32/STM32F446RE-NUCLEO/Cube2/Cube2.ioc
+++ b/STM32/STM32F446RE-NUCLEO/Cube2/Cube2.ioc
@@ -75,8 +75,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=DAC_TUT.ioc
-ProjectManager.ProjectName=DAC_TUT
+ProjectManager.ProjectFileName=Cube2.ioc
+ProjectManager.ProjectName=Cube2
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 ProjectManager.ToolChainLocation=
