--- a/STM32/STM32F446RE-NUCLEO/DMASineWaves/DMASineWaves.ioc
+++ b/STM32/STM32F446RE-NUCLEO/DMASineWaves/DMASineWaves.ioc
@@ -75,8 +75,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Cube2.ioc
-ProjectManager.ProjectName=Cube2
+ProjectManager.ProjectFileName=DMASineWaves.ioc
+ProjectManager.ProjectName=DMASineWaves
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Other Toolchains (GPDSC)
 ProjectManager.ToolChainLocation=
